Fix buttons' label alignment

--- a/css/compat/themes/compat-kenta-319-beta-11.css
+++ b/css/compat/themes/compat-kenta-319-beta-11.css
@@ -1,3 +1,7 @@
+body.theme-kenta.has-checkout-layout--multi-step .fc-step__actions .fc-step__next-step {
+  justify-content: center;
+}
+
 body.theme-kenta .select2-container--default .select2-selection--single {
   border-color: var(--fluidcheckout--field--border-color, var(--fluidcheckout--color--light-grey, #d8d8d8));
 }
